[package]
name = "yew-aplayer"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Use APlayer in Yew!"
repository = "https://github.com/GalAster/yew-aplayer"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
aplayer-wasmbind = {version = "0.2", path = "../wasmbind-aplayer" }
unescape = {version = "0.1", optional = true}

[dev-dependencies]


[features]
default = ["auto-cdn", "meting"]
auto-cdn = []
# https://github.com/metowolf/MetingJS
meting = ["unescape"]
